# GoDDaR

./: .gitignore  .gitmodules  README.md  a.out  auxfunctions.cmi  auxfunctions.cmo  auxfunctions.cmx  auxfunctions.ml  cmd.cmi  cmd.cmx  cmd.ml  deadlock_detector.cmi  deadlock_detector.cmo  deadlock_detector.cmx  deadlock_detector.ml  dlock  dune  dune-project  output.txt  output_2.txt  printer.cmi  printer.cmo  printer.cmx  printer.ml  test_file.txt  types.cmi  types.cmo  types.cmx  types.ml
test/: ccs_parser.ml  deadlock_detector.expected  deadlock_detector.ml  deadlock_detector_output.ml  dune  main_act_verifier.expected  main_act_verifier.ml  migo.expected  migo.ml
test/data/: .gitignore  gen_gcatch.sh  gen_migo.sh  gen_results.sh
test/data/benchmark/bad-order-circular/: main.migo
test/data/benchmark/bad-order-sequential/: main.migo
test/data/benchmark/dingo-cond-recur/: README.txt  main.go
test/data/benchmark/dingo-fanin-pattern/: main.migo
test/data/benchmark/dingo-local-deadlock/: main.migo
test/data/benchmark/dingo-local-deadlock-fixed/: main.migo
test/data/benchmark/go_by_example_channels/: main.migo
test/data/benchmark/go_by_example_select/: README.txt  main.migo
test/data/benchmark/gomela-x-sender-x-receiver+1/: main.migo
test/data/benchmark/gong-not-safe/: main.go  main.migo
test/data/benchmark/gopher-sel/: main.go  main.migo
test/data/benchmark/gopher-sel-fixed/: main.go
test/data/benchmark/partial_deadlock/: main.go  main.migo
test/data/simple/go/: main.go  (+1 more)
test/migo/: dune  migo.expected  migo.ml
test/migo/data/: gen_migo.sh
(+165 files in other folders)
