(test
 (name ccs_parser)
 (modules ccs_parser)
 (libraries dlock)
 (modes byte))

(test
 (name main_act_verifier)
 (modules main_act_verifier)
 (libraries dlock)
 (modes byte))

(test
 (name deadlock_detector)
 (modules deadlock_detector)
 (libraries dlock)
 (modes byte))

(test
 (name migo)
 (modules migo)
 (libraries dlock)
 (modes byte))

(rule
 (alias runtest)
 (deps (source_tree ./data))
 (action (diff migo.expected migo.output)))
